# www/docs/swagger.json
@@ -4,6 +4,39 @@
         "contact": {}
     },
     "paths": {
+        "/create": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Spot"
+                ],
+                "summary": "Create Spot Fleet Template",
+                "parameters": [
+                    {
+                        "description": "Request Body",
+                        "name": "requestBody",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/pb.CreateTemplateRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/get-instance": {
             "post": {
                 "consumes": [
@@ -23,7 +56,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/pb.GetSpotFleetRequest"
+                            "$ref": "#/definitions/pb.GetTemplateRequest"
                         }
                     }
                 ],
@@ -38,7 +71,7 @@
             }
         },
         "/launch": {
-            "get": {
+            "post": {
                 "consumes": [
                     "application/json"
                 ],
@@ -49,6 +82,17 @@
                     "Spot"
                 ],
                 "summary": "Launch Spot Fleet Instances",
+                "parameters": [
+                    {
+                        "description": "Request Body",
+                        "name": "requestBody",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/pb.LaunchTemplateRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -81,14 +125,71 @@
                     }
                 }
             }
+        },
+        "/stop": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Spot"
+                ],
+                "summary": "Stop Spot Fleet Instances",
+                "parameters": [
+                    {
+                        "description": "Request Body",
+                        "name": "requestBody",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/pb.StopTemplateRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
-        "pb.GetSpotFleetRequest": {
+        "pb.CreateTemplateRequest": {
             "type": "object",
             "properties": {
-                "spotFleetId": {
+                "name": {
                     "type": "string"
+                }
+            }
+        },
+        "pb.GetTemplateRequest": {
+            "type": "object",
+            "properties": {
+                "spotInstanceTemplateId": {
+                    "type": "integer"
+                }
+            }
+        },
+        "pb.LaunchTemplateRequest": {
+            "type": "object",
+            "properties": {
+                "spotInstanceTemplateId": {
+                    "type": "integer"
+                }
+            }
+        },
+        "pb.StopTemplateRequest": {
+            "type": "object",
+            "properties": {
+                "spotInstanceTemplateId": {
+                    "type": "integer"
                 }
             }
         }
